# support-ticket-intent-router

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  schemas.py
app/core/: config.py
app/services/: predictor.py
docs/: DATASETS.md  PRD.md  PROJECT_SPEC.md
tests/: conftest.py
tests/integration/: test_guardrail.py  test_guardrails.py  test_logging.py  test_predict_batch.py
ticket_router.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
training/: data.py  eval_baseline.py  train_baseline.py
