[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ticket-router"
version = "0.1.0"
description = "Ticket Router (Intent Classification) API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "scikit-learn>=1.3.0",
  "numpy>=1.24.0",
  "certifi>=2024.2.2",
  "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.2.0",
  "pytest>=7.4.0",
  "httpx>=0.25.0",
]

[dependency-groups]
dev = [
  "ruff>=0.2.0",
  "pytest>=7.4.0",
  "httpx>=0.25.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "training*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
